updated the readme.md